Update HopDong, TheKTX